# zoneboost

./: .gitignore  IDEAS.md  LICENSE  README.md  pyproject.toml
benchmarks/: README.md  compare_lightgbm.py
docs/: api-reference.html  benchmarks.html  explaining-predictions.html  getting-started.html  how-it-works.html  index.html  origin-story.html
docs/assets/: script.js  style.css
paper/: abstract.md  paper.tex  references.bib
paper/experiments/: build_tables.py  datasets.py  model_zoo.py  patch_catboost.py  run_ablation.py  run_benchmark.py  run_conformal_calibration_drift.py  run_depth_experiment.py  run_interpretability.py  run_remaining_classification.py  seed_confirmed_rows.py
src/zoneboost/: __init__.py  _bootstrap.py  _common.py  _conditional_grid.py  _conformal.py  _depth.py  _drift.py  _drift_alert.py  _evidence_card.py  _explain.py  _purify.py  _reliability.py  _shrinkage.py  _sql_export.py  _survival.py  _weak_learner.py  _zone_namer.py  _zone_profile.py  (+3 more)
tests/: test_batched_pair_scores.py  test_bootstrap.py  test_classifier.py  test_common.py  test_conditional_grid.py  test_conformal.py  test_depth.py  test_drift.py  test_drift_alert.py  test_evidence_card.py  test_explain.py  test_glm_losses.py  test_hierarchical.py  test_mondrian.py  test_purify.py  test_regressor.py  test_reliability.py  test_sample_weight.py  test_shrinkage.py  test_sklearn_compat.py  test_sql_export.py  test_strict_shape_constraints.py  test_survival.py  test_trimmed_mean.py  test_undersample.py  test_weak_learner.py  test_zone_namer.py  test_zone_profile.py  test_zones.py
(+5 files in other folders)
