[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoneboost"
version = "0.25.0"
description = "Fully transparent, zone-based gradient boosting (regression and classification) built entirely from descriptive statistics -- no decision trees, no gradient descent, no neural weights."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "Adonia Simango", email = "asimango@gmail.com" },
]
keywords = ["machine-learning", "regression", "classification", "gradient-boosting", "scikit-learn", "interpretable-ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
benchmark = [
    "lightgbm>=4.0",
]

[project.urls]
Homepage = "https://github.com/stainaz/zoneboost"
Issues = "https://github.com/stainaz/zoneboost/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zoneboost"]
